--- a/package.json
+++ b/package.json
@@ -22,10 +22,7 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.9.1",
-<<<<<<< HEAD
-    "node-geocoder": "^3.25.0"
-=======
+    "node-geocoder": "^3.25.0",
     "sentiment": "^5.0.2"
->>>>>>> 0fb1547a9411b8b29d70951c6da1309330ddbb70
   }
 }
